# ragna

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  capture.cpp  capture.h  paint.cpp  ragna.cpp  ragna.qrc  ragnaconfigcombobox.cpp  ragnaconfigcombobox.h  ragnaconfigwindow.cpp  ragnaconfigwindow.h  ragnacontroller.cpp  ragnacontroller.h  ragnaprefs.cpp  ragnaprefs.h  ragnascrollarea.cpp  ragnascrollarea.h  resources.qrc  style.css
src/resources/: ragna.qrc  ragna.qss
src/v4l-common/: codec-fwht.c  codec-v4l2-fwht.c  v4l-helpers.h  v4l2-convert.h  v4l2-info.h  v4l2-tpg-core.c  videodev2.h
